# iodd-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  API_DOCUMENTATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODEBASE_AUDIT_CHECKLIST.md  CODEBASE_AUDIT_MASTER_PLAN.md  CODE_QUALITY_ANALYSIS_DETAILED.md  CODE_QUALITY_REPORT.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_QUALITY_AUDIT_FINDINGS.md  DOCS_FIX_CHECKLIST.md  DOCS_REVIEW_EXECUTIVE_SUMMARY.md  Dockerfile  EDS_CAPACITY_IMPLEMENTATION_SUMMARY.md  EDS_COMPLETE_CAPTURE_PLAN.md  EDS_EXPORT_ZIP_ENDPOINT.md  ENHANCEMENTS.md  FINAL_EXTRACTION_SUMMARY.md  FINAL_REIMPORT_SUMMARY.md  FgithubGreenStackconfigprometheusprometheus.yml  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSE.md  MENU_GUI_IMPLEMENTATION_LOG.md  Makefile  NESTED_ZIP_IMPORT.md  PHASE_10_LOGGING_MONITORING_REPORT.md  PHASE_11_CONFIGURATION_REVIEW_REPORT.md  PHASE_12_DEPENDENCY_MANAGEMENT_REPORT.md  PHASE_2_CLEANUP_GUIDE.md  PHASE_2_UNUSED_IMPORTS_REPORT.md  PHASE_5_BUG_DETECTION_REPORT.md  PHASE_6_DATABASE_REVIEW_REPORT.md  PHASE_7_PERFORMANCE_REPORT.md  PQA_IMPROVEMENT_LOG.md  (+43 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema.py  002_add_iodd_assets_table.py  003_add_enumeration_values.py  008_add_enum_values.py  009_add_eds_assemblies.py  011_add_eds_groups.py  014_add_performance_indexes.py  026_add_eds_advanced_sections.py  033_add_std_variable_ref_single_values.py  034_add_parameter_pqa_columns.py  035_add_record_item_single_values.py  036_add_record_item_info_attrs.py  038_add_parameter_datatype_ref.py  039_add_has_supported_access_locks.py  044_fix_boolean_column_defaults.py  046_add_record_item_description.py  048_add_record_item_value_range.py  049_add_parameter_xml_order.py  050_add_record_item_access_right_restriction.py  057_add_menu_condition_subindex.py  063_add_wire_name_text_id.py  064_add_test_xsi_type.py  065_add_device_identity_text_ids.py  068_add_role_menu_xsi_type.py  071_add_array_element_value_range.py  14aafab5b863_add_recommended_performance_indexes.py  9d7556282dff_expand_network_sections_schema.py
claude/: 00_intake.md  COMPREHENSIVE_FINDINGS.md  SECURITY_AUDIT.md  TEST_ANALYSIS.md
config/nodered/: flows.json
docs/: CHANGELOG.md  COLOR_MIGRATION_SUMMARY.md  CONFIG_PAGE_DEVELOPER_GUIDE.md  CONTRIBUTING.md  DOCS_SYSTEM_SPRINT1_SUMMARY.md  DOCUMENTATION_OVERHAUL_PLAN.md  EDS_PARSER_IMPROVEMENT_PLAN.md  ENHANCED_MENUS_SUMMARY.md  IOT_PLATFORM_DEPLOYMENT.md  PQA_DEVELOPER_GUIDE.md  PQA_IMPROVEMENT_FINAL_REPORT.md  PQA_SYSTEM_OVERVIEW.md  QUICK_START_P1_ENHANCEMENTS.md  THEME_QUICKSTART.md  WEEK_8_FINAL_SUMMARY.md  events-errors-fix-2025-11-20.md  index.md  markdown_inventory.md  pqa-device56-investigation.md  schema-fixes-2025-11-20.md  structure.md
docs/about/: changelog.md  contributing.md  license.md  support.md
docs/api/: authentication.md  overview.md
docs/architecture/: ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md
docs/audits/: CODEBASE_AUDIT_MASTER_PLAN.md  PHASE_01_AUDIT_REPORT.md  PHASE_02_DEAD_CODE_REMOVAL_SUMMARY.md  PHASE_02_FRONTEND_UNUSED_CODE_REPORT.md  PHASE_03_DOCUMENTATION_AUDIT_REPORT.md  PHASE_03_IN_PLATFORM_DOCS_REVIEW.md  PHASE_04_SECURITY_AUDIT_REPORT.md  PHASE_08_TEST_COVERAGE_REPORT.md  PHASE_09_TYPE_SAFETY_REPORT.md  PHASE_13_CI_CD_PIPELINE_REPORT.md  PHASE_14_CODE_REFACTORING_REPORT.md  PHASE_15_FRONTEND_ACCESSIBILITY_REPORT.md  PHASE_16_IOT_INTEGRATION_TESTING_REPORT.md  PHASE_17_PRODUCTION_READINESS_REPORT.md  PHASE_18_FINAL_REVIEW_REPORT.md
docs/database/: migrations.md
docs/deployment/: docker.md  environment.md  monitoring.md  production.md
docs/developer/: API_ENDPOINTS.md  API_SPECIFICATION.md  BEST_PRACTICES.md  DEVELOPER_REFERENCE.md
docs/developer-guide/: code-quality.md  setup.md
docs/getting-started/: configuration.md  docker.md
docs/in-progress/: session-log.md
docs/project/: CLEANUP_SUMMARY.md
docs/root-docs/: ARCHITECTURE.md  COMPONENTS_INVENTORY.md  EXTRACTION_COMPLETION_GUIDE.md  EXTRACTION_STATUS.md  EXTRACTION_SUMMARY.md  REFACTORING_PLAN.md
docs/troubleshooting/: TROUBLESHOOTING.md
docs/user/: CONFIGURATION.md  GUI_DOCUMENTATION.md  NESTED_ZIP_IMPORT.md  USER_FEATURES.md  USER_MANUAL.md  VISUAL_FEATURES.md
docs/user-guide/: adapters.md  api.md  web-interface.md
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: analyze_imports.py  backfill_record_items.py  cleanup_frontend_unused.py  cleanup_unused_imports.py  setup.bat  setup.sh  start_celery_worker.sh  start_flower.sh
services/common/: __init__.py  circuit_breaker.py  requirements.txt
services/influx-ingestion/: ingest.py
services/mqtt-bridge/: bridge.py
src/: __init__.py  api.py  cache.py  cached_storage.py  celery_app.py  config.py  database.py  greenstack.py  start.py  telemetry.py
src/models/: __init__.py
src/parsers/: __init__.py  eds_advanced_sections.py  eds_diagnostics.py  eds_package_parser.py  eds_parser.py
src/parsing/: __init__.py
src/routes/: __init__.py  admin_routes.py  config_export_routes.py  eds_routes.py  flow_routes.py  iodd_routes.py  pqa_routes.py  theme_routes.py  ticket_routes.py
src/storage/: __init__.py  base.py  communication.py  custom_datatype.py  device.py  document.py  menu.py  parameter.py  process_data.py  std_variable_ref.py  test_config.py
src/tasks/: __init__.py  dlq_handler.py  export_tasks.py  generation_tasks.py  iodd_tasks.py
src/utils/: __init__.py  codebase_stats.py  eds_diff_analyzer.py  eds_reconstruction.py  forensic_reconstruction_v2.py  parsing_quality.py  pqa_diff_analyzer.py  pqa_orchestrator.py
test-data/: README.md
test-data/eds_parsing_and_rendering_concept/: INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  eds_data.json  example_usage.py  index.html  parsing_report.txt
tests/: README.md  __init__.py  conftest.py  test_api.py  test_parser.py  test_storage.py
(+209 files in other folders)
